Remove obsolete loader.bat referencing CS2Glow_obf.jar